<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xu_2">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/deadline"
            android:textColor="#00FFFF"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/username"
            android:textSize="25sp"
            android:textColor="#000000"
            android:textStyle="bold">

        </TextView>
        <EditText
            android:id="@+id/username_dl"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/text_1">
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/password"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold">

    </TextView>
    <EditText
        android:id="@+id/password_dl"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/text_2"
        android:inputType="textPassword">
    </EditText>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_dl"
            tools:ignore="ButtonStyle">

        </Button>
        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enroll"
            android:background="@drawable/button_dl"
            android:layout_marginLeft="25dp"
            tools:ignore="ButtonStyle">

        </Button>
    </LinearLayout>


</LinearLayout>